@@ -2,6 +2,7 @@ require 'json'
 require 'cgi'
 require 'ym4r/google_maps/geocoding'
 require 'net/http'
+require 'time'
 include Ym4r::GoogleMaps
 
 require "#{File.dirname(__FILE__)}/sunlight/base.rb"
