@@ -1,4 +1,8 @@
-h3. 1.0.4 / 2009/10-02
+h3. 1.0.5 / 2009-10-27
+
+* Implement birthdate on Legislator as a Time object
+
+h3. 1.0.4 / 2009-10-02
 
 * Implement youtube_id for YouTube usernames
 
